fixed margins, spacing and responsive issues

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,4 @@
-.container {
-  margin-right: 100px;
-  margin-left: 100px;
-}
+
 .wrapper {
   background: linear-gradient(
     179.7deg,
@@ -11,9 +8,11 @@
     rgb(118, 162, 229) 92.3%
   );
   margin-top: 15px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   padding: 20px;
   border-radius: 20px;
+  margin-left: 300px;
+  margin-right: 300px;
 }
 
 .search {
@@ -57,7 +56,7 @@
 .flex-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .temperature {
   font-family: "Orbitron", sans-serif;
@@ -66,7 +65,7 @@
 
 .image {
   position: relative;
-  bottom: 25px;
+  bottom: 20px;
 }
 .looks-like {
   font-family: "Orbitron", sans-serif;
@@ -86,13 +85,19 @@
   text-align: center;
   margin-bottom: 20px;
 }
+.forecast-container {
+  border: 1px black solid;
+  padding: 10px;
+  background-color: #C1F5DC;
+  border-radius: 25px;
+}
 .weather-forecast-date {
   font-size: 16px;
   color: black;
   font-family: "Orbitron", sans-serif;
 }
 .weather-forecast-temperature {
-  font-size: 12px;
+  font-size: 9px;
   color: black;
   font-family: "Orbitron", sans-serif;
 }
@@ -108,13 +113,38 @@
     color: black;
     font-family: "Orbitron", sans-serif;
   }
+  
   .weather-forecast-temperature {
     font-size: 8px;
     color: black;
     font-family: "Orbitron", sans-serif;
-    margin-top: 10px;
+    margin-top: 20px;
   }
   .forecast-image {
-    display: none;
+    width: 15px;
   }
+}
+@media only screen and (max-width: 1100px) {
+  .weather-forecast-date {
+    font-size: 10px;
+    color: black;
+    font-family: "Orbitron", sans-serif;
+  }
+  .forecast-image {
+    width: 20px;
+  }
+  .weather-forecast-temperature {
+    font-size: 8px;
+    color: black;
+    font-family: "Orbitron", sans-serif;
+    margin-top: 7px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .wrapper {
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
 }
